[package]
name = "turnkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "2.1.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.4.11", features = ["full"] }
thiserror = "1.0.57"
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
rand = "0.9.0-alpha.0"
dotenv = "0.15.0"
base64-url = "2.0.2"
solana-client = "2.1.4"
p256 = "0.13.2"

[dev-dependencies]
solana-sdk = "2.1.4"
